--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -44,7 +44,7 @@
             <span class="text-muted"><i>(optional)</i></span>
         </label>
         <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
-        <odp-data-structure-selector class="d-flex ml-4" [edit]="edit" [format]="currNode.dataStructure.outgoing"
+        <odp-data-structure-selector class="d-flex ml-4" [edit]="edit" [format]="currNode.dataStructure?.outgoing"
             (formatChange)="onFormatChange($event)" [hideGeneric]="currNode?.type=='MAPPING'">
         </odp-data-structure-selector>
     </div>
