--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/postgre-connector/postgre-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/postgre-connector/postgre-connector.component.html
@@ -1,1 +1,4 @@
-<p>postgre-connector works!</p>
+<div class="form-group position-relative">
+    <label for="query">SQL Query</label>
+    <textarea id="query" class="form-control" rows="5" cols="30" [(ngModel)]="currNode.options.query"></textarea>
+</div>
