node and path delete

--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -101,11 +101,14 @@
                 </svg>
             </div>
 
-            <div [ngClass]="{'show':showNodeProperties}" class="node-properties border-left position-fixed bg-white">
+            <div [ngClass]="{'show':showNodeProperties || showPathProperties}" class="node-properties border-left position-fixed bg-white">
                 <odp-node-properties *ngIf="showNodeProperties" [edit]="edit" [nodeList]="nodeList"
                     [currNode]="selectedNode.currNode" (close)="showNodeProperties=false"
                     (changesDone)="changesDone = true">
                 </odp-node-properties>
+                <odp-path-properties *ngIf="showPathProperties" [edit]="edit" [nodeList]="nodeList"
+                    [path]="selectedPath" (close)="showPathProperties=false" (changesDone)="changesDone = true">
+                </odp-path-properties>
             </div>
         </div>
     </div>
