--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -96,12 +96,11 @@
                             <ng-container *ngIf="item.status != 'Pending' && item.status != 'Maintenance' ">
                                 <span *ngIf="canDeployFlow(item)" id='deploy_{{i}}' class="text-primary mr-3"
                                     (click)="deployFlow(i)">Deploy</span>
-                                <span class="fw-600 font-13 hover mr-3"
+                                <!-- <span class="fw-600 font-13 hover mr-3"
                                     *ngIf="item.status !== 'Active' && canStartStopFlow(i)"
-                                    (click)="toggleFlowStatus(i)">Start</span>
-                                <span class="fw-600 font-13 hover mr-3"
-                                    *ngIf="item.status == 'Active' && canStartStopFlow(i)"
-                                    (click)="toggleFlowStatus(i)">Stop</span>
+                                    (click)="toggleFlowStatus(i)">Start</span> -->
+                                <span class="fw-600 font-13 hover mr-3" *ngIf="canStartStopFlow(i)"
+                                    (click)="toggleFlowStatus(i)">{{item.status === 'Active' ? 'Stop' : 'Start'}}</span>
                                 <span class="dsi dsi-more-vertical hover mr-3 ignore-outside"
                                     (click)="showDropDown($event,i)"></span>
                             </ng-container>
